# conda-lens

./: .gitignore  CONTRIBUTING.md  MATRIX_TEST_IMPLEMENTATION.md  PLAN.md  README.md  SCENARIOS.md  pyproject.toml  test_matrix.py
examples/notebooks/: README.md  data_exploration.ipynb  interactive_demo.ipynb  prototyping_experimentation.ipynb  research_process_documentation.ipynb
examples/scripts/: README.md
examples/scripts/processing/: example_pipeline.py
examples/scripts/utils/: env_tools.py
skill/: conda-lens-skill.md  conda_lens_skill.py
src/conda_lens/: __init__.py  cache.py  cache_utils.py  cache_warm.py  cli.py  diagnostics.py  diff.py  env_inspect.py  env_resolver.py  lint.py  magic.py  matrix_tester.py  migration.py  repro_card.py  sandbox.py  solver_explainer.py  version_matcher.py  web_ui.py  web_ui_old.py
src/conda_lens/rules/: __init__.py  abi.py  advanced.py  base.py  corrupt_metadata.py  duplicates.py  editable_shadow.py  generic.py  graph.py  llm_stack.py  manager_priority.py  missing_deps.py  python_compat.py  torch_cuda.py  version_conflicts.py
tests/: README.md  test_cache_utils.py  test_cli_smoke.py  test_dashboard_tooltips.py  test_diagnostics.py  test_disk_cache_resolver.py  test_examples.py  test_migration.py  test_migration_logic.py  test_migration_web_endpoints.py  test_new_diagnostics.py  test_web_features.py
