[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "conda-lens"
version = "0.1.0"
description = "The AI Environment Doctor & Reproducibility Toolkit"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
  {name = "Antigravity", email = "antigravity@google.com"},
]
dependencies = [
  "typer>=0.9.0",
  "rich>=13.0.0",
  "pydantic>=2.0.0",
  "pyyaml>=6.0",
  "nvidia-ml-py>=11.450.51",
  "ipython>=8.0.0",
  "huggingface_hub>=0.16.0",
  "openai>=1.0.0",
  "fastapi>=0.100.0",
  "uvicorn>=0.22.0",
  "jinja2>=3.1.0",
]

[project.scripts]
conda-lens = "conda_lens.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/conda_lens"]
